--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de-CH">
 <head>
   <meta charset="utf-8">
   <title>Ich sehe was, was du nicht siehst. </title>
